components/gateway-api/base/gateway-openshift-ingress-maas-default-gateway.yaml
# Source: gateway-api/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: maas-default-gateway
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    opendatahub.io/managed: "false"
    security.opendatahub.io/authorino-tls-bootstrap: "true"
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: maas-default-gateway
    app.kubernetes.io/name: maas
    istio.io/rev: openshift-gateway
    opendatahub.io/managed: "false"
spec:
  gatewayClassName: openshift-default
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: maas-gateway-options
  listeners:
    - name: https
      hostname: "maas.apps.cluster-6f7dh.6f7dh.sandbox3519.opentlc.com"
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: router-certs-default
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              maas.opendatahub.io/gateway-access: "true"
