components/gateway-api/base/route-openshift-ingress-maas-default-gateway.yaml
# Source: gateway-api/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: maas-default-gateway
  namespace: openshift-ingress
  annotations:
    haproxy.router.openshift.io/timeout: "10m"
    haproxy.router.openshift.io/set-forwarded-headers: "append"
    router.openshift.io/service-ca-certificate: "true"
spec:
  host: maas.apps.cluster-6f7dh.6f7dh.sandbox3519.opentlc.com
  port:
    targetPort: 443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: maas-default-gateway-openshift-default
    weight: 100
  wildcardPolicy: None
